objects/Account.object
<CustomObject>
    <fields>
        <fullName>ARKANSAS_LOAN__c</fullName>
        <label>ARKANSAS LOAN</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>General</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Account_Types_for_Laser_Pro__c</fullName>
        <formula>CASE( TEXT(Type) ,
  &apos;Cooperative&apos; , &apos;Government&apos;, 
 &apos;Employee Stock Ownership Plan(ESOP)&apos;, &apos;Trust&apos;,
 &apos;Public Funds&apos;, &apos;Government&apos;,
 &apos;Limited Liability Company(LLC)&apos;,&apos;Limited Liability Company&apos;,
 &apos;Non Profit Entity/Churches&apos;,&apos;Corporation&apos;,
 &apos;Professional Association&apos;,&apos;Association&apos;,
 &apos;Subchapter S Corporation&apos;,&apos;Corporation&apos;,
 &apos;Trusts and Estates&apos;,&apos;Trust&apos;,
 &apos;Other&apos;,&apos;Corporation&apos;,
 &apos;Institutional Investor&apos;,&apos;Corporation&apos;,
 &apos;Financial Inst&apos;,&apos;Corporation&apos;,TEXT(Type))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Types for Laser Pro</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_Address__c</fullName>
        <formula>BillingStreet &amp; &apos; &apos; &amp; BillingCity &amp; &apos;, &apos; &amp; BillingState &amp; &apos; &apos; &amp; BillingPostalCode</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Billing Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Branch__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Branch</label>
        <length>85</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Business_Cell_Phone__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Business Cell Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>CF_Account_Document_Awaiting_Review__c</fullName>
        <description>This field has been used in &quot;Customer Documents Awaiting Review - Account&quot; list view on Account.</description>
        <label>Account Document Awaiting Review</label>
        <summaryFilterItems>
            <field>LLC_BI__AccountDocument__c.LLC_BI__reviewStatus__c</field>
            <operation>equals</operation>
            <value>Awaiting Review</value>
        </summaryFilterItems>
        <summaryForeignKey>LLC_BI__AccountDocument__c.LLC_BI__Account__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>CF_Account_Primary_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account Primary Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Accounts (Account Primary Contact)</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CF_Annual_Review_Date_Due_In__c</fullName>
        <formula>IF(CF_Annual_Review_Date__c = null,&apos;&apos;,
IF(AND(CF_Annual_Review_Date__c-TODAY() &gt;= 0, CF_Annual_Review_Date__c-TODAY() &lt;= 30), &quot;30 Days&quot;, 
IF(AND(CF_Annual_Review_Date__c-TODAY() &gt;= 31, CF_Annual_Review_Date__c-TODAY() &lt;= 60), &quot;31-60 Days&quot;, 
IF(AND(CF_Annual_Review_Date__c-TODAY() &gt;= 61, CF_Annual_Review_Date__c-TODAY() &lt;= 90), &quot;61-90 Days&quot;,&apos;&apos;))))</formula>
        <label>Annual Review Date Due In</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CF_Annual_Review_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Annual Review Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CF_Bad_Address__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field will be populated from core to indicate a bad address</description>
        <label>Bad Address</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CF_Competitive_Analysis__c</fullName>
        <description>This field is being used under Background and Analysis on Account</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Competitive Analysis</label>
        <length>131072</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>CF_Corporate_ACH_Credit_Limit__c</fullName>
        <defaultValue>0</defaultValue>
        <description>This field sums the total &quot;Corporate ACH Origination Limit&quot; of all ACH Credit Origination products on the account</description>
        <label>Corporate ACH Credit Limit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CF_Corporate_ACH_Debit_Limit__c</fullName>
        <defaultValue>0</defaultValue>
        <description>This field sums the total &quot;Corporate ACH Origination Limit&quot; of all ACH Debit Origination products on the account.</description>
        <label>Corporate ACH Debit Limit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CF_Country_of_Citizenship__c</fullName>
        <label>Country of Citizenship</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>AA</fullName>
                    <label>ARUBA</label>
                </value>
                <value>
                    <fullName>AC</fullName>
                    <label>ANTIGUA AND BARBUDA</label>
                </value>
                <value>
                    <fullName>AF</fullName>
                    <label>AFGHANISTAN</label>
                </value>
                <value>
                    <fullName>AG</fullName>
                    <label>ALGERIA</label>
                </value>
                <value>
                    <fullName>AJ</fullName>
                    <label>AZERBAIJAN</label>
                </value>
                <value>
                    <fullName>AL</fullName>
                    <label>ALBANIA</label>
                </value>
                <value>
                    <fullName>AM</fullName>
                    <label>ARMENIA</label>
                </value>
                <value>
                    <fullName>AN</fullName>
                    <label>ANDORRA</label>
                </value>
                <value>
                    <fullName>AO</fullName>
                    <label>ANGOLA</label>
                </value>
                <value>
                    <fullName>AR</fullName>
                    <label>ARGENTINA</label>
                </value>
                <value>
                    <fullName>AS</fullName>
                    <label>AUSTRALIA</label>
                </value>
                <value>
                    <fullName>AT</fullName>
                    <label>ASHMORE AND CARTIER ISLANDS</label>
                </value>
                <value>
                    <fullName>AU</fullName>
                    <label>AUSTRIA</label>
                </value>
                <value>
                    <fullName>AV</fullName>
                    <label>ANGUILLA</label>
                </value>
                <value>
                    <fullName>AY</fullName>
                    <label>ANTARCTICA</label>
                </value>
                <value>
                    <fullName>BA</fullName>
                    <label>BAHRAIN</label>
                </value>
                <value>
                    <fullName>BB</fullName>
                    <label>BARBADOS</label>
                </value>
                <value>
                    <fullName>BC</fullName>
                    <label>BOTSWANA</label>
                </value>
                <value>
                    <fullName>BD</fullName>
                    <label>BERMUDA</label>
                </value>
                <value>
                    <fullName>BE</fullName>
                    <label>BELGIUM</label>
                </value>
                <value>
                    <fullName>BF</fullName>
                    <label>BAHAMAS, THE</label>
                </value>
                <value>
                    <fullName>BG</fullName>
                    <label>BANGLADESH</label>
                </value>
                <value>
                    <fullName>BH</fullName>
                    <label>BELIZE</label>
                </value>
                <value>
                    <fullName>BK</fullName>
                    <label>BOSNIA AND HERZEGOVINA</label>
                </value>
                <value>
                    <fullName>BL</fullName>
                    <label>BOLIVIA</label>
                </value>
                <value>
                    <fullName>BM</fullName>
                    <label>BURMA</label>
                </value>
                <value>
                    <fullName>BN</fullName>
                    <label>BENIN</label>
                </value>
                <value>
                    <fullName>BO</fullName>
                    <label>BELARUS</label>
                </value>
                <value>
                    <fullName>BP</fullName>
                    <label>SOLOMON ISLANDS</label>
                </value>
                <value>
                    <fullName>BQ</fullName>
                    <label>NAVASSA ISLAND</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CF_Credit_Report_Comments__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Credit Report Comments</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CF_Credit_Report_Discrepancy__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Credit Report Discrepancy</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CF_Current_Spreads_Status__c</fullName>
        <label>Spreads Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Current</fullName>
                    <default>true</default>
                    <label>Current</label>
                </value>
                <value>
                    <fullName>F/S Needed</fullName>
                </value>
                <value>
                    <fullName>F/S Requested</fullName>
                </value>
                <value>
                    <fullName>F/S Received, Ready for Spreads</fullName>
                </value>
                <value>
                    <fullName>Spreads in Progress</fullName>
                </value>
                <value>
                    <fullName>Spreads Complete, Review Needed</fullName>
                </value>
                <value>
                    <fullName>Spreads Complete, No Review Needed</fullName>
                </value>
                <value>
                    <fullName>Complete</fullName>
                    <isActive>false</isActive>
                    <label>Complete</label>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                    <isActive>false</isActive>
                    <label>In Progress</label>
                </value>
                <value>
                    <fullName>Not Started</fullName>
                    <isActive>false</isActive>
                    <label>Not Started</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CF_F_S_Received_Date__c</fullName>
        <description>It will be there in financial spreads section</description>
        <encryptionScheme>None</encryptionScheme>
        <label>F/S Received Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CF_F_S_Requested_Date__c</fullName>
        <description>Field to capture Financial Spread Requested Date</description>
        <encryptionScheme>None</encryptionScheme>
        <label>F/S Requested Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CF_Financial_Analysis__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Financial Analysis</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>CF_Financial_Statement_Date__c</fullName>
        <description>It will be there under financial spreads section</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Financial Statement Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CF_Gov_t_Issued_Pic_ID_1__c</fullName>
        <description>Used to capture Id info on business accounts</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Gov&apos;t Issued Pic ID 1</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CF_Gov_t_Issued_Pic_ID_2__c</fullName>
        <description>Used to capture Id info on business accounts</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Gov&apos;t Issued Pic ID 2</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CF_High_Speed_RDC_Limit__c</fullName>
        <defaultValue>0</defaultValue>
        <description>This field sums the total &quot;Daily Deposit Amount&quot; of all High Speed RDC products on the account</description>
        <label>High Speed RDC Limit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CF_ID_Issued_By_1__c</fullName>
        <description>Used to capture Id info on business accounts</description>
        <encryptionScheme>None</encryptionScheme>
        <label>ID Issued By 1</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CF_ID_Issued_By_2__c</fullName>
        <description>Used to capture Id info on business accounts</description>
        <encryptionScheme>None</encryptionScheme>
        <label>ID Issued By 2</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CF_ID_Type_1__c</fullName>
        <description>Used to capture Id info on business accounts</description>
        <label>ID Type 1</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Amish Affiliation</fullName>
                </value>
                <value>
                    <fullName>Birth City</fullName>
                </value>
                <value>
                    <fullName>Birth Certificate</fullName>
                </value>
                <value>
                    <fullName>Consular ID Card</fullName>
                </value>
                <value>
                    <fullName>Court Order Appointment</fullName>
                </value>
                <value>
                    <fullName>Drivers License</fullName>
                </value>
                <value>
                    <fullName>Fictitious Name Registration</fullName>
                </value>
                <value>
                    <fullName>Foreign Certification</fullName>
                </value>
                <value>
                    <fullName>Government Exempt</fullName>
                </value>
                <value>
                    <fullName>Insurance Card</fullName>
                </value>
                <value>
                    <fullName>Meeting Minutes</fullName>
                </value>
                <value>
                    <fullName>Military ID</fullName>
                </value>
                <value>
                    <fullName>Mother&apos;s Maiden Name</fullName>
                </value>
                <value>
                    <fullName>Partnership Agreement</fullName>
                </value>
                <value>
                    <fullName>Passport</fullName>
                </value>
                <value>
                    <fullName>Password</fullName>
                </value>
                <value>
                    <fullName>Representative Payee Letter</fullName>
                </value>
                <value>
                    <fullName>State Articles</fullName>
                </value>
                <value>
                    <fullName>Sec of State Certification</fullName>
                </value>
                <value>
                    <fullName>Social Security Number</fullName>
                </value>
                <value>
                    <fullName>State Issued ID</fullName>
                </value>
                <value>
                    <fullName>Trust Agreement</fullName>
                </value>
                <value>
                    <fullName>Tax ID</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CF_ID_Type_2__c</fullName>
        <description>Used to capture Id info on business accounts</description>
        <label>ID Type 2</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Amish Affiliation</fullName>
                </value>
                <value>
                    <fullName>Birth City</fullName>
                </value>
                <value>
                    <fullName>Birth Certificate</fullName>
                </value>
                <value>
                    <fullName>Consular ID Card</fullName>
                </value>
                <value>
                    <fullName>Court Order Appointment</fullName>
                </value>
                <value>
                    <fullName>Drivers License</fullName>
                </value>
                <value>
                    <fullName>Fictitious Name Registration</fullName>
                </value>
                <value>
                    <fullName>Foreign Certification</fullName>
                </value>
                <value>
                    <fullName>Government Exempt</fullName>
                </value>
                <value>
                    <fullName>Insurance Card</fullName>
                </value>
                <value>
                    <fullName>Meeting Minutes</fullName>
                </value>
                <value>
                    <fullName>Military ID</fullName>
                </value>
                <value>
                    <fullName>Mother&apos;s Maiden Name</fullName>
                </value>
                <value>
                    <fullName>Partnership Agreement</fullName>
                </value>
                <value>
                    <fullName>Passport</fullName>
                </value>
                <value>
                    <fullName>Password</fullName>
                </value>
                <value>
                    <fullName>Representative Payee Letter</fullName>
                </value>
                <value>
                    <fullName>State Articles</fullName>
                </value>
                <value>
                    <fullName>Sec of State Certification</fullName>
                </value>
                <value>
                    <fullName>Social Security Number</fullName>
                </value>
                <value>
                    <fullName>State Issued ID</fullName>
                </value>
                <value>
                    <fullName>Trust Agreement</fullName>
                </value>
                <value>
                    <fullName>Tax ID</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CF_ID_Type__c</fullName>
        <description>This field is being referenced under CIP information section in Person Accounts.</description>
        <label>ID Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Amish Affiliation</fullName>
                </value>
                <value>
                    <fullName>Birth City</fullName>
                </value>
                <value>
                    <fullName>Birth Certificate</fullName>
                </value>
                <value>
                    <fullName>Consular ID Card</fullName>
                </value>
                <value>
                    <fullName>Court Order Appointment</fullName>
                </value>
                <value>
                    <fullName>Drivers License</fullName>
                </value>
                <value>
                    <fullName>Fictitious Name Registration</fullName>
                </value>
                <value>
                    <fullName>Foreign Certification</fullName>
                </value>
                <value>
                    <fullName>Government Exempt</fullName>
                </value>
                <value>
                    <fullName>Insurance Card</fullName>
                </value>
                <value>
                    <fullName>Meeting Minutes</fullName>
                </value>
                <value>
                    <fullName>Military ID</fullName>
                </value>
                <value>
                    <fullName>Mother&apos;s Maiden Name</fullName>
                </value>
                <value>
                    <fullName>Partnership Agreement</fullName>
                </value>
                <value>
                    <fullName>Passport</fullName>
                </value>
                <value>
                    <fullName>Password</fullName>
                </value>
                <value>
                    <fullName>Representative Payee Letter</fullName>
                </value>
                <value>
                    <fullName>State Articles</fullName>
                </value>
                <value>
                    <fullName>Sec of State Certification</fullName>
                </value>
                <value>
                    <fullName>Social Security Number</fullName>
                </value>
                <value>
                    <fullName>State Issued ID</fullName>
                </value>
                <value>
                    <fullName>Trust Agreement</fullName>
                </value>
                <value>
                    <fullName>Tax ID</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CF_Is_Farm_Operating_Loan__c</fullName>
        <formula>CONTAINS(cm_Industry_Code__r.Name, &quot;Farm&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Farm Operating Loan?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CF_LOS_Review_Status__c</fullName>
        <label>LOS Review Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                    <default>true</default>
                    <label>None</label>
                </value>
                <value>
                    <fullName>Ready for Risk Rating</fullName>
                </value>
                <value>
                    <fullName>Risk Rating Complete, RM Review</fullName>
                </value>
                <value>
                    <fullName>RM Reviewed</fullName>
                </value>
                <value>
                    <fullName>Client Call Scheduled</fullName>
                </value>
                <value>
                    <fullName>Client Call Completed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CF_Last_Spreads_Completed_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Last Spreads Completed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CF_Last_Treasury_Review_Date__c</fullName>
        <description>This field is used to capture the most recent &quot;Date Review Completed&quot; value from the associated Treasury Review records</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Last Treasury Review Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CF_Lockbox_Limit__c</fullName>
        <defaultValue>0</defaultValue>
        <description>This field sums the total &quot;Daily Deposit Amount&quot; of all Remote Lockbox and Retail Lockbox products on the account</description>
        <label>Lockbox Limit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CF_Low_Speed_RDC_Limit__c</fullName>
        <defaultValue>0</defaultValue>
        <description>This field sums the total &quot;Daily Deposit Amount&quot; of all Low Speed RDC products on the account</description>
        <label>Low Speed RDC Limit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CF_Mobile_RDC_Limit__c</fullName>
        <defaultValue>0</defaultValue>
        <description>This field sums the total &quot;Daily Deposit Amount&quot; of all Mobile RDC products on the account</description>
        <label>Mobile RDC Limit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CF_Naics_Code__c</fullName>
        <formula>cm_Industry_Code__r.cm_Industry_Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Naics Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CF_New_Existing__c</fullName>
        <label>New/Existing</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>New to Bank</fullName>
                    <default>true</default>
                    <label>New to Bank</label>
                </value>
                <value>
                    <fullName>New to Treasury</fullName>
                </value>
                <value>
                    <fullName>Existing Customer</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CF_Next_Spreads_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Next Spreads Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CF_Next_Treasury_Review_Date__c</fullName>
        <formula>IF( CF_Treasury_Risk_Rating__c == 1 ,  ADDMONTHS(CF_Last_Treasury_Review_Date__c,24),
  IF( CF_Treasury_Risk_Rating__c == 2,  ADDMONTHS(CF_Last_Treasury_Review_Date__c,18),
   IF( CF_Treasury_Risk_Rating__c == 3  || CF_Treasury_Risk_Rating__c == 4,  ADDMONTHS(CF_Last_Treasury_Review_Date__c,12), 
     NULL)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Next Treasury Review Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CF_Not_an_Individual_Entity__c</fullName>
        <formula>NOT(ISPICKVAL(Type  , &quot;Individual&quot;) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Not an Individual Entity?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CF_Outstanding_F_S_Covenants__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Field to Represent any outstanding Financial Spread Covenant.</description>
        <label>Outstanding F/S Covenants?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CF_Place_of_Issuance_1__c</fullName>
        <description>Used to capture Id info on business accounts</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Place of Issuance 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CF_Place_of_Issuance_2__c</fullName>
        <description>Used to capture Id info on business accounts</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Place of Issuance 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CF_Place_of_Issuance__c</fullName>
        <description>This field is being referenced under CIP section in Person Accounts</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Place of Issuance</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CF_Preferred_Method_of_Communication__c</fullName>
        <label>Preferred Method of Communication</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Email</fullName>
                </value>
                <value>
                    <fullName>Phone</fullName>
                </value>
                <value>
                    <fullName>Text</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CF_Primary_ID_Expiration_Date_1__c</fullName>
        <description>Used to capture Id info on business accounts</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Primary ID Expiration Date 1</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CF_Primary_ID_Expiration_Date_2__c</fullName>
        <description>Used to capture Id info on business accounts</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Primary ID Expiration Date 2</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CF_Primary_ID_Issue_Date_1__c</fullName>
        <description>Used to capture Id info on business accounts</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Primary ID Issue Date 1</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CF_Primary_ID_Issue_Date_2__c</fullName>
        <description>Used to capture Id info on business accounts</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Primary ID Issue Date 2</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CF_Relationship_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field will be manually populated by the user.</description>
        <label>Relationship Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Accounts2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CF_Relationship_Narrative__c</fullName>
        <description>This field is used on Credit Memo Relationship narrative section.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Relationship Narrative</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>CF_Repayment_Analysis__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Repayment Analysis</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>CF_Servicing_Level__c</fullName>
        <description>Used to describe the servicing level of each account</description>
        <label>Servicing Level</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Gold</fullName>
                </value>
                <value>
                    <fullName>Silver</fullName>
                </value>
                <value>
                    <fullName>Bronze</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CF_Spreads_Assignee__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Spreads Assignee</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CF_TM_Deposit_Only__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used on Temporary Limit Changes Layout.</description>
        <label>TM Deposit Only</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CF_Target_Review_Completion_Date__c</fullName>
        <description>Field to Capture Financial Spreads Target Review Completion Date</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Target Review Completion Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CF_Total_ACH_Credit_Exposure__c</fullName>
        <description>This field has been used in Treasury Exposure.</description>
        <label>Total ACH Credit Exposure</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CF_Total_ACH_Debit_Exposure__c</fullName>
        <description>This field set has been used to display treasury exposure value.</description>
        <label>Total ACH Debit Exposure</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CF_Total_ACH_Exposure__c</fullName>
        <formula>CF_Total_ACH_Credit_Exposure__c  +  CF_Total_ACH_Debit_Exposure__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total ACH Exposure</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CF_Total_Aggregate_Exposure__c</fullName>
        <formula>LLC_BI__Total_Affiliated_Exposure__c  +  LLC_BI__Total_Indirect_Exposure__c  +  LLC_BI__Total_Direct_Exposure__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Aggregate Loan Exposure</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
</CustomObject>